# psst

./: .gitignore  CMakeLists.txt  README.md  config.toml
src/: audio.cpp  audio.h  config.cpp  config.h  hotkey.cpp  hotkey.h  inject.cpp  inject.h  main.cpp  overlay.cpp  overlay.h  sound.cpp  sound.h  transcribe.cpp  transcribe.h  tray.cpp  tray.h
